# BreakoutGame

./: CMakeLists.txt  README.md  test_build.cpp  test_game
include/Core/: Game.h
include/Entities/: Ball.h  Brick.h  GameObject.h  Paddle.h
include/Input/: InputManager.h
include/Physics/: PhysicsEngine.h
include/Rendering/: Renderer.h  Shader.h
src/: main.cpp
src/Core/: Game.cpp
src/Entities/: Ball.cpp  Brick.cpp  GameObject.cpp  Paddle.cpp
src/Input/: InputManager.cpp
src/Physics/: PhysicsEngine.cpp
src/Rendering/: Renderer.cpp  Shader.cpp
